<resources>
    <string name="menu">Меню (версия 1.48)</string>
    <!--Для увеличения версии: обновить строку выше + обновить в gradle + обновить [cur_version] в PreferenceController-->

    <!-->
    Названия окон
    <-->
    <string name="app_name">Маркировка ТСД</string>
    <string name="userData">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>
    <string name="settings">Настройки</string>
    <string name="scan_sscc">отсканируйте SSCC</string>
    <string name="scan_sscc2">Сканирование SSCC</string>
    <string name="scan_sgtin_name">Сканирование SGTIN</string>
    <string name="scan_name">Сканирование</string>
    <string name="pallet_transform_name">Трансформация короба</string>
    <string name="task_name">Создать задачу</string>
    <string name="tasks_name">Задачи</string>
    <string name="verification_name">Верификация</string>
    <string name="certificates_name">Сертификаты</string>


    <string name="sscc_sgtin_info_txt">Отсканируйте SGTIN/SSCC</string>
    <string name="mark_id">Идентификатор МД</string>
    <string name="mark_id_text_view">Идентификатор МД:</string>
    <string name="field_is_empty">Не оставляйте поле пустым</string>
    <string name="mark_id_is_empty">Не оставляйте mark_id пустым</string>
    <string name="mark_id_error">mark_id состоит из 10 цифр</string>
    <string name="url_setting_error">Укажите URL в формате: https://адрес/</string>
    <string name="url_set">Установлен URL %s</string>
    <string name="default_url">по умолчанию</string>
    <string name="save">Сохранить</string>
    <string name="proxy_settings">Настройки прокси</string>
    <string name="web_service_url">URL веб-сервиса:</string>
    <string name="proxy_address">Адрес (пр. i.tatar.ru):</string>
    <string name="proxy_port">Порт (пр. 8080):</string>
    <string name="proxy_login">Логин (пр. govtatar\\med.ru):</string>
    <string name="proxy_password">Пароль (пр. 2014):</string>
    <string name="proxy_enable">Прокси</string>
    <string name="coming">Приход</string>
    <string name="direct_coming">Прямой Приход</string>
    <string name="reverse_coming">Обратный Приход</string>
    <string name="direct_reverse">Тип прихода</string>
    <string name="result_tv_text">Результат:</string>
    <string name="result_text">Результат запроса</string>
    <string name="consumption">Расход</string>
    <string name="inventory">Товарные запасы</string>
    <string name="unpack">Расформирование SSCC</string>
    <string name="unpack_btn_text">Расформировать SSCC</string>
    <string name="log">Логирование</string>
    <string name="logout">Выход</string>
    <string name="search">Поиск</string>
    <string name="ok">OK</string>
    <string name="search_error">Накладная с данным номером отсутствует в системе!</string>
    <string name="search_error2">Накладная с данным номером уже отсканирована</string>
    <string name="search_error3">Ничего не найдено!</string>
    <string name="inventory_in_dev">Функционал товарных запасов в разработке</string>
    <string name="scan_sscc_in_dev">Функционал сканирования SSCC в разработке</string>
    <string name="unpack_in_dev">Функционал по расформированию SSCC в разработке</string>
    <string name="unpack_in_dev_ttmf">ТТМФ Функционал по расформированию SSCC в разработке</string>
    <string name="sgtin_sscc_info_in_dev">Функционал подробной информации по штрихкоду в разработке</string>
    <string name="ttn">ТТН</string>
    <string name="positions">Позиции</string>
    <string name="cipher">Шифр: %s</string>
    <string name="seria">Серия: %s</string>
    <string name="scan_finish">Сканирование завершено. Сохранить?</string>
    <string name="save_scan">Сохранить отсканированные позиции?</string>
    <string name="delete_scan">Все отсканированные позиции будут удалены!</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="need_relogin">Токен устарел, необходимо выполнить повторный вход</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="loading">Загрузка</string>
    <string name="error">Ошибка</string>
    <string name="scanned">Отсканировано: %s</string>
    <string name="tls_1">TLS 1.0</string>
    <string name="tls_1_1">TLS 1.1</string>
    <string name="tls_1_2">TLS 1.2</string>
    <string name="tls_1_3">TLS 1.3</string>
    <string name="ssl_3">SSL 3</string>
    <string name="security_protocol">Протокол безопасности:</string>
    <string name="already_scanned">Эта упаковка уже была отсканирована</string>
    <string name="wrong_package_specification">Неверная спецификация упаковки</string>
    <string name="remember_auth">Сохранять логин и пароль</string>
    <string name="markirovka">Маркировка</string>
    <string name="bnt_clear_text">Очистить</string>
    <string name="bnt_left_text"><![CDATA[<]]><![CDATA[-]]></string>
    <string name="bnt_right_text"><![CDATA[-]]><![CDATA[>]]></string>
    <string name="barcode_info">Информация по штрихкоду</string>
    <string name="import_files">Импорт</string>
    <string name="gtin_scanned">Отсканировано</string>

    <!--> Заголовки для вывода информации по коду <-->

    <string name="cis">КИЗ</string>
    <string name="gtin">GTIN</string>
    <string name="ssccTitle">SSCC</string>
    <string name="productGroupTitle">Группа</string>
    <string name="productNameTitle">Наименование</string>
    <string name="brandTitle">Бренд</string>
    <string name="tnVedTitle">Код ТН ВЭД</string>
    <string name="statusTitle">Статус</string>
    <string name="expiratioinDateTitle">Дата срока годности</string>
    <string name="emissionTypeTitle">Тип эмиссии</string>
    <string name="emissionDateTitle">Дата эмиссии</string>
    <string name="packageTypeTitle">Код типа упаковки</string>
    <string name="ownerNameTitle">Наименование собственника</string>
    <string name="ownerInnTitle">ИНН собственника</string>
    <string name="producerNameTitle">Наименование производителя</string>
    <string name="producerInnTitle">ИНН производителя</string>
    <string name="prVetTitle">
        ID производственного ВСД(для продукции, \n
        произведенной в РФ) или транспортного ВСД(для продукции, \n
        произведенной вне РФ)
    </string>
    <!--><-->
    <string name="scan_sgtin_success">Проверка SGTIN пройдена успешно</string>
    <string name="scan_sscc_success">Проверка SSCC пройдена успешн</string>
    <string name="scan_fail">Проверка кода не пройдена</string>
    <string name="non_authorized">Для получения информации выполните авторизацию</string>
    <string name="verification_scan">Сканируйте SSCC/SGTIN код</string>
    <string name="basic_info">Основная информация</string>
    <string name="emission_info">Эмиссия</string>
    <string name="owner_info">Владелец</string>
    <string name="prVet_info">Вет. документ</string>

    <!-->
    Сертификаты
    <-->
    <string name="noCertSelected">Сертификат не установлен</string>


    <string-array name="urls">
        <item>"https://etpzakaz.ru/sfarm/sgtin/api/mark/"</item>
        <item>"https://med.ttmf.ru/mark/api/mark/"</item>
    </string-array>
</resources>