<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--android:src="@drawable/cast_album_art_placeholder"-->
    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/ll_1_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.70"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_service_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/web_service_url"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_service_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textUri" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/security_protocol"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/rg_protocols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/til_service_url"
                app:layout_constraintStart_toStartOf="@id/til_service_url"
                app:layout_constraintTop_toBottomOf="@id/tv_protocol">

                <RadioButton
                    android:id="@+id/rb_tls_1_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tls_1" />

                <RadioButton
                    android:id="@+id/rb_tls_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tls_1_1" />

                <RadioButton
                    android:id="@+id/rb_tls_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tls_1_2" />

                <RadioButton
                    android:id="@+id/rb_ssl_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ssl_3" />

            </RadioGroup>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <CheckBox
                        android:id="@+id/cb_remember_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/remember_auth"
                        />

                    <CheckBox
                        android:id="@+id/cb_markirovka"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/markirovka" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_1_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_proxy_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_selector"
                android:text="@string/proxy_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_markirovka" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_selector"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_proxy_settings" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>