<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/coming"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/coming"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.03" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/consumption"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/consumption"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/coming" />

                        <!-->
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/inventory"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/inventory"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/consumption" />
                            <-->
                        <!-->
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/scan_sscc"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/scan_sscc2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/inventory" />
                        <-->

                        <!-->
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/pallet_transform"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/pallet_transform_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/consumption" />
                            <-->
                        <!-->
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/task"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/task_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/pallet_transform" />
                            <-->
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/scan_sgtin"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/scan_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/consumption" />
                        <!--
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/barcode_info"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/barcode_info"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/scan_sgtin" />
                         -->
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/verification"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/verification_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/scan_sgtin" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/logs"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/log"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/verification" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/logout"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/button_selector"
                            android:text="@string/logout"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/logs" />
                </android.support.constraint.ConstraintLayout>
        </ScrollView>
</android.support.constraint.ConstraintLayout>